--- a/.github/ISSUE_TEMPLATE/bug_task_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_task_report.yml
@@ -1,6 +1,6 @@
 name: Bug / Task Report
 description: Report a bug or task with necessary details.
-title: 
+title: "Add a summary"
 labels: []
 body:
   - type: dropdown
