--- a/.github/ISSUE_TEMPLATE/bug_task_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_task_report.yml
@@ -1,6 +1,6 @@
 name: Bug / Task Report
 description: Report a bug or task with necessary details.
-title: "[BUG/TASK] "  # This is the default GitHub title input
+title: "Add a title"  # This is the default GitHub title input
 labels: []
 body:
   - type: dropdown
