--- a/.github/ISSUE_TEMPLATE/bug_task_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_task_report.yml
@@ -50,6 +50,7 @@ body:
         - In Progress
         - Dev Fixed
         - Test
+        - Retesting in progress
         - Closed
         - Reopened
         - Deferred
