--- a/.github/workflows/auto-labels.yml
+++ b/.github/workflows/auto-labels.yml
@@ -1,7 +1,7 @@
 name: Auto Assign Labels
 on:
   issues:
-    types: [opened]
+    types: [opened, edited]
 
 jobs:
   add-labels:
@@ -13,19 +13,19 @@ jobs:
           actions: "add-labels"
           issue-number: ${{ github.event.issue.number }}
           labels: |
-            ${{ contains(github.event.issue.body, 'Severity: Critical') && 'Critical' || '' }}
-            ${{ contains(github.event.issue.body, 'Severity: High') && 'High' || '' }}
-            ${{ contains(github.event.issue.body, 'Severity: Medium') && 'Medium' || '' }}
-            ${{ contains(github.event.issue.body, 'Severity: Low') && 'Low' || '' }}
-            ${{ contains(github.event.issue.body, 'Priority: High') && 'High Priority' || '' }}
-            ${{ contains(github.event.issue.body, 'Priority: Medium') && 'Medium Priority' || '' }}
-            ${{ contains(github.event.issue.body, 'Priority: Low') && 'Low Priority' || '' }}
-            ${{ contains(github.event.issue.body, 'Status: Open') && 'Open' || '' }}
-            ${{ contains(github.event.issue.body, 'Status: In Progress') && 'In Progress' || '' }}
-            ${{ contains(github.event.issue.body, 'Status: Dev Fixed') && 'Dev Fixed' || '' }}
-            ${{ contains(github.event.issue.body, 'Status: Test') && 'Test' || '' }}
-            ${{ contains(github.event.issue.body, 'Status: Closed') && 'Closed' || '' }}
-            ${{ contains(github.event.issue.body, 'Status: Reopened') && 'Reopened' || '' }}
-            ${{ contains(github.event.issue.body, 'Status: Deferred') && 'Deferred' || '' }}
-            ${{ contains(github.event.issue.body, 'Status: Invalid') && 'Invalid' || '' }}
-            ${{ contains(github.event.issue.body, 'Status: Duplicate') && 'Duplicate' || '' }}
+            ${{ github.event.issue.body && contains(github.event.issue.body, 'Severity: Critical') && 'Critical' || '' }}
+            ${{ github.event.issue.body && contains(github.event.issue.body, 'Severity: High') && 'High' || '' }}
+            ${{ github.event.issue.body && contains(github.event.issue.body, 'Severity: Medium') && 'Medium' || '' }}
+            ${{ github.event.issue.body && contains(github.event.issue.body, 'Severity: Low') && 'Low' || '' }}
+            ${{ github.event.issue.body && contains(github.event.issue.body, 'Priority: High') && 'High Priority' || '' }}
+            ${{ github.event.issue.body && contains(github.event.issue.body, 'Priority: Medium') && 'Medium Priority' || '' }}
+            ${{ github.event.issue.body && contains(github.event.issue.body, 'Priority: Low') && 'Low Priority' || '' }}
+            ${{ github.event.issue.body && contains(github.event.issue.body, 'Status: Open') && 'Open' || '' }}
+            ${{ github.event.issue.body && contains(github.event.issue.body, 'Status: In Progress') && 'In Progress' || '' }}
+            ${{ github.event.issue.body && contains(github.event.issue.body, 'Status: Dev Fixed') && 'Dev Fixed' || '' }}
+            ${{ github.event.issue.body && contains(github.event.issue.body, 'Status: Test') && 'Test' || '' }}
+            ${{ github.event.issue.body && contains(github.event.issue.body, 'Status: Closed') && 'Closed' || '' }}
+            ${{ github.event.issue.body && contains(github.event.issue.body, 'Status: Reopened') && 'Reopened' || '' }}
+            ${{ github.event.issue.body && contains(github.event.issue.body, 'Status: Deferred') && 'Deferred' || '' }}
+            ${{ github.event.issue.body && contains(github.event.issue.body, 'Status: Invalid') && 'Invalid' || '' }}
+            ${{ github.event.issue.body && contains(github.event.issue.body, 'Status: Duplicate') && 'Duplicate' || '' }}
