--- a/.github/workflows/auto-labels.yml
+++ b/.github/workflows/auto-labels.yml
@@ -17,7 +17,7 @@ jobs:
                 contains(github.event.issue.body, 'High') && 'High' || 
                 contains(github.event.issue.body, 'Medium') && 'Medium' || 
                 contains(github.event.issue.body, 'Low') && 'Low' || '' }},
-            ${{ contains(github.event.issue.body, 'Priority: High') && 'High Priority' || 
+            ${{ contains(github.event.issue.body, 'Priority: High Priority') && 'High Priority' || 
                 contains(github.event.issue.body, 'Priority: Medium') && 'Medium Priority' || 
                 contains(github.event.issue.body, 'Priority: Low') && 'Low Priority' || '' }},
             ${{ contains(github.event.issue.body, 'Status: Open') && 'Open' || 
